--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "moment-timezone": "0.5.9",
     "morgan": "1.7.0",
     "multer": "1.3.0",
+    "mysql": "https://registry.npmjs.org/mysql/-/mysql-2.1.1.tgz",
     "netjet": "1.1.3",
     "nodemailer": "0.7.1",
     "oauth2orize": "1.7.0",
