add 辣鸡markdown的checkbox的滋瓷 fix .gitgnore的content的文件夹错了

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 config.js
-content
+#content
+content/images
+content/data
+content/themes/ghost-theme-kaldorei
